# marcelle

./: .eslintignore  .eslintrc.js  .gitignore  .npmignore  .prettierrc.js  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  lerna.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  rollup.config.js  tailwind.config.js  tsconfig.json
.changeset/: brown-wolves-study.md  clean-books-learn.md  config.json  dull-fireants-guess.md  dull-yaks-double.md  early-planets-wink.md  empty-buses-tell.md  fair-squids-crash.md  fifty-eagles-lie.md  five-kings-dance.md  flat-cows-pretend.md  giant-files-chew.md  gold-hotels-hide.md  gold-olives-learn.md  healthy-horses-wonder.md  hip-adults-leave.md  hot-years-retire.md  hungry-dragons-turn.md  lazy-mangos-fetch.md  lemon-eagles-itch.md  loud-kiwis-peel.md  lucky-buttons-dress.md  lucky-eggs-invite.md  nice-dryers-reply.md  perfect-brooms-fetch.md  plenty-years-grin.md  pre.json  rare-apricots-itch.md  real-bottles-jog.md  rich-bees-switch.md  rotten-coats-compare.md  shiny-walls-impress.md  shy-foxes-pretend.md  silent-olives-rescue.md  six-owls-laugh.md  slimy-cougars-trade.md  small-fans-eat.md  sour-moons-deliver.md  strange-panthers-cough.md  (+8 more)
apps/demos/diabetes-sklearn-onnx/: data.js  diabetes_regression_sklearn_onnx.ipynb  diabetes_train_set.csv  index.html  model.js  pyproject.toml  testing-sliders.js  testing.js
examples/iris-python/: batch-prediction.js  common.js  data.js  model.js  preprocessing.js  pyproject.toml  rf_iris.onnx  svc_iris.onnx  testing.js  train.py
(+744 files in other folders)
